Fixes #49, graph/v1/lineplot no longer overflows its container

--- a/ardtweeno-gem/public/main.css
+++ b/ardtweeno-gem/public/main.css
@@ -515,7 +515,7 @@ table th[class*="span"],
 
 .graph-placeholder {
 	width: 100%;
-	height: 100%;
+	height: 80%;
 	font-size: 14px;
 	line-height: 1.2em;
 }
